# ocaml-moe

./: Makefile  README.md  dune-project  moe.opam
lib/: common.ml  common.mli  dune  ei.ml  ei.mli  hyperopt.ml  hyperopt.mli  moe.ml  moe.mli  nextpoints.ml  nextpoints.mli
src/: common.ml  dune  ei.mli  gpnextpoints.ml  hyperopt.mli  mean.ml  mean.mli  nextpoints.mli  ocamlmoe.ml
